--- a/src/Playlist/Playlist.css
+++ b/src/Playlist/Playlist.css
@@ -39,6 +39,35 @@
   .Playlist-save:hover {
     background-color: rgba(108, 65, 233, .7);
   }
+
+  .loading-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    color: white;
+    font-size: 24px;
+    z-index: 1000;
+  }
+  
+  .spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid white;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
   
   ::-webkit-scrollbar {
       width: 0px;
